<resources>
    <string name="app_name">Blue Chat</string>
    <string name="welcome_text">Welcome to Blue Chat</string>
    <string name="create_a_new_account">Create a New Account</string>
    <string name="reg_email">Email</string>
    <string name="reg_password">Password</string>
    <string name="reg_display_name">Display Name</string>
    <string name="create_account_btn">CREATE ACCOUNT</string>
    <string name="log_out_menu">Log Out</string>
    <string name="login_to_your_account">Login to your Account</string>
    <string name="login_btn">Login</string>
    <string name="login_to_account">Sign In</string>
    <string name="display_name_settings">Display Name</string>
    <string name="status_settings">I`m here!</string>
    <string name="change_image_settings">Change Image</string>
    <string name="change_status_settings">Change Status</string>
    <string name="new_message_blank_activity">New Message</string>
    <string name="settings_menu">Settings</string>
    <string name="save_changes_btn">Save Changes</string>
    <string name="settings_all_users">All Users</string>
    <string name="default_your_status">Your Status</string>
    <string name="user_name_text">User Name</string>
    <string name="user_status_text">User Status</string>
    <string name="online_status">online</string>
    <string name="offline_status">offline</string>
    <string name="profile_display_name">Display Name</string>
    <string name="profile_send_request_btn">Send Request</string>
    <string name="profile_total_friends">Total Friends</string>
    <string name="profile_user_status">Current User Status</string>
    <string name="profile_decline_friend_request">Decline Friend Request</string>
    <string name="profile_cancel_friend_request">Cancel Friend Request</string>
    <string name="profile_unfriend_request">Unfriend</string>
    <string name="profile_accept_friend_request">Accept Friend Request</string>

    <string name="channel_name">Friend Request</string>
    <string name="channel_description">New friend request</string>
    <string name="chat_bar_last_seen">Last Seen</string>
    <string name="chat_enter_message">Enter Message…</string>
    <string name="search_menu">Search</string>

</resources>
